2009-01-03  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_list_view_header):
	Better listview header (uses lightborder) when glazestyle != 0.

2009-01-03  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_inset):
	Decreased the inset around buttons, do you like it?

2009-01-02  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_progressbar_trough),
	(murrine_draw_progressbar_fill):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_progressbar_trough),
	(murrine_rgba_draw_progressbar_fill):
	Should fix roundness bugs on very small progressbar.

2009-01-02  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_scale_trough):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_scale_trough):
	Fixed a small bug on the scale gradient.

2009-01-02  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_scale_draw_gradient),
	(murrine_draw_scale_trough):
	* src/murrine_draw_rgba.c (murrine_scale_draw_gradient),
	(murrine_rgba_draw_scale_trough):
	Added a small lightborder inside the scale gradient.

2009-01-02  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_progressbar_fill):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_progressbar_fill):
	Fixed previous commit.

2009-01-02  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* schema/murrine.xml.in.in:
	* src/murrine_draw.c (murrine_draw_progressbar_fill):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_progressbar_fill):
	Added progressbarstyle = 2 (cells).

2009-01-02  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* schema/murrine.xml.in.in:
	Removed duplicated and unused options.

2009-01-02  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_progressbar_fill):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_progressbar_fill):
	Fixed a bug when the progressbar is really small.

2009-01-02  Andrea Cimitan  <andrea.cimitan@gmail.com>
