@@ -1,5 +1,11 @@
 2009-01-03  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
+	* src/murrine_draw.c (murrine_draw_button):
+	* src/murrine_draw_rgba.c (murrine_rgba_draw_button):
+	Small performance improvement in button's drawing.
+
+2009-01-03  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
 	* src/murrine_draw.c (murrine_draw_list_view_header):
 	Better listview header (uses lightborder) when glazestyle != 0.
 
